-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.2, 6.4.0
-
macOS 13 Ventura
-
-
569d91d85 (tqtc/lts-5.15), 135d9f364 (6.4), 1891ed96b (dev), 0c6023a69 (tqtc/lts-6.2), 8feb73b51 (tqtc/lts-6.2), 25092ca41 (tqtc/lts-5.15)
Application crashes with official Qt Camera Example on macOS 13 Ventura.
Way to reproduce:
Build and run the official Qt Camera Example, and click device item (in menu bar), your iPhone will send notification and application crashes.
Please see the terminal warning.
Issue is plausibly in [AVCaptureDALDevice setTorchMode:] which will cause the application to crash.
This is a macOS 13.0 specific problem which uses the Continuity Camera which is a new function.
Terminal output:
2022-10-25 12:34:35.779 camera[6146:74167] *** Terminating app due to uncaught exception 'NSInvalidArgumentException', reason: '*** -[AVCaptureDevice_Tundra setFlashMode:] Unsupported flashMode - use -isFlashModeSupported: to discover valid flash modes'
-
-
- First throw call stack:
(
0 CoreFoundation 0x0000000189b50418 __exceptionPreprocess + 176
1 libobjc.A.dylib 0x000000018969aea8 objc_exception_throw + 60
2 AVFCapture 0x00000001a3fc33e8 -[AVCaptureDALDevice setTorchMode:] + 0
3 QtMultimedia 0x000000010116b0f8 _ZN12QVideoWindow11resizeEventEP12QResizeEvent + 95988
4 QtMultimedia 0x000000010116aa48 _ZN12QVideoWindow11resizeEventEP12QResizeEvent + 94276
5 QtMultimedia 0x000000010116a91c _ZN12QVideoWindow11resizeEventEP12QResizeEvent + 93976
6 camera 0x0000000100da31bc _ZN7QCamera5startEv + 32
7 camera 0x0000000100da1b2c _ZN6Camera9setCameraERK13QCameraDevice + 2140
8 camera 0x0000000100da0f60 _ZN6Camera18updateCameraDeviceEP7QAction + 88
9 camera 0x0000000100daa630 _ZN9QtPrivate11FunctorCallINS_11IndexesListIJLi0EEEENS_4ListIJP7QActionEEEvM6CameraFvS5_EE4callES9_PS7_PPv + 132
10 camera 0x0000000100daa5a0 _ZN9QtPrivate15FunctionPointerIM6CameraFvP7QActionEE4callINS_4ListIJS3_EEEvEEvS5_PS1_PPv + 80
11 camera 0x0000000100daa4d8 _ZN9QtPrivate11QSlotObjectIM6CameraFvP7QActionENS_4ListIJS3_EEEvE4implEiPNS_15QSlotObjectBaseEP7QObjectPPvPb + 148
12 QtCore 0x00000001019772f4 _ZN11QMetaObject8activateEP7QObjectPKS_iPPv + 3108
13 QtGui 0x00000001011e86d0 _ZN12QActionGroup9triggeredEP7QAction + 60
14 QtCore 0x00000001019772f4 _ZN11QMetaObject8activateEP7QObjectPKS_iPPv + 3108
15 QtGui 0x00000001015288dc _ZN7QAction8activateENS_11ActionEventE + 368
16 QtCore 0x000000010196f030 _ZN7QObject5eventEP6QEvent + 588
17 QtWidgets 0x0000000101db2a04 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent + 272
18 QtWidgets 0x0000000101db3c44 _ZN12QApplication6notifyEP7QObjectP6QEvent + 544
19 QtCore 0x0000000101930930 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent + 208
20 QtCore 0x0000000101931c08 _ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData + 820
21 libqcocoa.dylib 0x00000001023d11c4 qt_plugin_instance + 50560
22 libqcocoa.dylib 0x00000001023d1874 qt_plugin_instance + 52272
23 CoreFoundation 0x0000000189ad5a34 _CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION_ + 28
24 CoreFoundation 0x0000000189ad59c8 __CFRunLoopDoSource0 + 176
25 CoreFoundation 0x0000000189ad5738 __CFRunLoopDoSources0 + 244
26 CoreFoundation 0x0000000189ad433c __CFRunLoopRun + 836
27 CoreFoundation 0x0000000189ad38a4 CFRunLoopRunSpecific + 612
28 HIToolbox 0x00000001931473bc RunCurrentEventLoopInMode + 292
29 HIToolbox 0x0000000193147200 ReceiveNextEventCommon + 672
30 HIToolbox 0x0000000193146f48 _BlockUntilNextEventMatchingListInModeWithFilter + 72
31 AppKit 0x000000018cd2c630 _DPSNextEvent + 632
32 AppKit 0x000000018cd2b7c0 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 728
33 AppKit 0x000000018cd1fbf0 -[NSApplication run] + 464
34 libqcocoa.dylib 0x00000001023d05e8 qt_plugin_instance + 47524
35 QtCore 0x0000000101939cb8 _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE + 500
36 QtCore 0x0000000101931010 _ZN16QCoreApplication4execEv + 128
37 camera 0x0000000100d9e1ac main + 76
38 dyld 0x00000001896cbe50 start + 2544
)
libc++abi: terminating with uncaught exception of type NSException
[1] 6146 abort
- First throw call stack:
-
- blocks
-
QTBUG-104210 macOS 13 Ventura
-
- Closed
-
| For Gerrit Dashboard: QTBUG-108018 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 442829,3 | Fix crash on macos13 with iphone camera | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 442844,1 | Fix crash on macos13 with iphone camera | dev | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |
| 443102,3 | Fix crash on macos13 with iphone camera | 6.4 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 444906,4 | Fix crash on macos13 with iphone camera | tqtc/lts-6.2 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
| 445923,3 | Fix crash on macos13 with iphone camera | tqtc/lts-5.15 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
| 446335,2 | Fix audio example for macos | 6.4 | qt/qtcharts | Status: MERGED | +2 | 0 |
| 446359,2 | Fix audio example for macos | dev | qt/qtcharts | Status: MERGED | +2 | 0 |
| 452425,2 | Fix camera crash on macOS 13 | tqtc/lts-6.2 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
| 465059,4 | Fix audio example for macos | tqtc/lts-6.2 | qt/tqtc-qtcharts | Status: MERGED | +2 | 0 |
| 465062,2 | Fix audio example for macos | tqtc/lts-5.15 | qt/tqtc-qtcharts | Status: MERGED | +2 | 0 |